# FitLoop

./: .gitignore  .gitmessage  .mailmap-rewrite  CONTRIBUTING.md  FitLoop.code-workspace  FitLoop_CLAUDEPROMPT.md  FitLoop_v2_DEV_PLAN.md  PLAN.md  PROJECT_PLAN_v2.md  README.md  STATUS.md  fitloop-new.patch  fitloop.patch  fix.patch  stage4.patch  task12_backend_tests_spec.md  task8_avatar_ui_spec.md
.github/: maven-settings.xml
agent-service/: Dockerfile  pyproject.toml
agent-service/src/fitloop_agent/: __init__.py  backend.py  config.py  demo.py  main.py  metrics.py  model_stub.py  provider.py  schemas.py  worker.py  workflows.py
agent-service/tests/: test_backend.py  test_demo.py  test_guardrails.py  test_model_stub.py  test_provider.py  test_worker.py
backend/: .dockerignore  Dockerfile  Dockerfile.runtime  pom.xml  run-local.ps1
deploy/: .env.example  backup.sh  build-apk.ps1  deploy.sh  docker-compose.agent-e2e.yml  docker-compose.cn.yml  docker-compose.host.yml  docker-compose.https-only.yml  docker-compose.prebuilt.yml  docker-compose.tls.yml  docker-compose.yml  download.html  gen-secrets.sh  install-apk.sh  monitor.sh  nginx.conf  nginx.host.conf  nginx.https-only.conf  nginx.ssl.conf  nginx.tls.conf  reload-nginx.sh
docs/: 2026-05-27_summary.md  AGENT_DEMO.md  AI_PROMPTS.md  CLAUDE_NEXT_STAGE_PROMPT_2026-06-04.md  CODEX_PAUSE_2026-06-01_download_page.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  FITLOOP_DEVELOPMENT_MASTER_PLAN_2026-06-04.md  FITLOOP_STAGE_AND_NEXT_SPRINT_PLAN_2026-06-04.md  GPT_GUIDE.md  INTERVIEW_GUIDE.md  MANUAL_RELEASE_RUNBOOK.md  (+5 more)
(+199 files in other folders)
