[project]
name = "fitloop-agent-service"
version = "0.3.0"
description = "Controlled FitLoop coach and appeal-review agents"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "openai==2.46.0",
  "openai-agents==0.18.3",
  "httpx==0.28.1",
  "redis==7.4.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "prometheus-client==0.25.0",
  "opentelemetry-api==1.44.0",
  "opentelemetry-sdk==1.44.0",
  "opentelemetry-exporter-otlp-proto-http==1.44.0",
  "opentelemetry-instrumentation-fastapi==0.65b0",
  "opentelemetry-instrumentation-httpx==0.65b0",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.2",
  "pytest-asyncio==1.4.0",
  "respx==0.23.1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fitloop_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
